\name{rebookNews}
\title{rebook news}
\encoding{UTF-8}

\section{Version 1.2.0}{\itemize{
\item
Added the \code{rmd2id()} function to easily determine the ID for each chapter.

\item
Link to the originating chapter for the set-up code in \code{extractCached()}.
}}

\section{Version 1.0.0}{\itemize{
\item
New package rebook, providing utilities for creating Bioconductor books. 
}}