@@ -8,6 +8,9 @@ Added the \code{rmd2id()} function to easily determine the ID for each chapter.
 
 \item
 Link to the originating chapter for the set-up code in \code{extractCached()}.
+
+\item 
+Expose \code{collapseStart()} and \code{collapseEnd()} for manual creation of collapsible chunks.
 }}
 
 \section{Version 1.0.0}{\itemize{
